[project]
name = "zim-mcp-server"
version = "0.1.0"
description = "MCP server that enables AI models to access and search ZIM format knowledge bases offline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "libzim>=3.7.0",
    "mcp[cli]>=1.9.0",
]
